feat: Recreating our note taking app with api
Understand the power and useCases of useEffect hook in React. And how to connect our react apps with external rest apis.

--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,7 @@
-.student-form {
+.App {
   text-align: center;
 }
 
-.student-section {
-  display: flex;
-  justify-content: space-between;
-  margin-top: 2rem;
-}
-
-.list {
-  border: 1px solid black;
+.note-item {
+  margin-top: 1rem;
 }
